gateway/4_gateway/healthcheck.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-healthcheck
spec:
  selector:
    matchLabels:
      app: nginx-healthcheck
  template:
    metadata:
      labels:
        app: nginx-healthcheck
    spec:
      containers:
        - image: nginx
          name: nginx
          volumeMounts:
            - mountPath: /usr/share/nginx/html
              name: nginx-html
              readOnly: true
      volumes:
        - name: nginx-html
          configMap:
            defaultMode: 420
            name: nginx-healthcheck
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-healthcheck
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: nginx-healthcheck
